--- a/proj.win32/MyGame.vcxproj.filters
+++ b/proj.win32/MyGame.vcxproj.filters
@@ -4,7 +4,7 @@
     <ClCompile Include="Z:\MyCompany\MyGame\Classes\AppDelegate.cpp">
       <Filter>Source Files\Classes</Filter>
     </ClCompile>
-    <ClCompile Include="Z:\MyCompany\MyGame\Classes\HelloWorldScene.cpp">
+    <ClCompile Include="..\Classes\MenuScene.cpp">
       <Filter>Source Files\Classes</Filter>
     </ClCompile>
     <ClCompile Include="Z:\MyCompany\MyGame\proj.win32\main.cpp">
@@ -13,12 +13,15 @@
     <ClCompile Include="Z:\MyCompany\MyGame\cocos2d\cocos\precheader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\Classes\GameScene.cpp">
+      <Filter>Source Files\Classes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Z:\MyCompany\MyGame\Classes\AppDelegate.h">
       <Filter>Source Files\Classes</Filter>
     </ClInclude>
-    <ClInclude Include="Z:\MyCompany\MyGame\Classes\HelloWorldScene.h">
+    <ClInclude Include="..\Classes\MenuScene.h">
       <Filter>Source Files\Classes</Filter>
     </ClInclude>
     <ClInclude Include="Z:\MyCompany\MyGame\proj.win32\main.h">
@@ -44,6 +47,9 @@
     </ClInclude>
     <ClInclude Include="Z:\MyCompany\MyGame\Resources\res\.gitkeep">
       <Filter>Resources\res</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Classes\GameScene.h">
+      <Filter>Source Files\Classes</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
