--- a/proj.win32/MyGame.vcxproj
+++ b/proj.win32/MyGame.vcxproj
@@ -117,7 +117,8 @@
       <ProxyFileName>%(Filename)_p.c</ProxyFileName>
     </Midl>
     <PostBuildEvent>
-      <Message>												</Message>
+      <Message>
+      </Message>
       <Command>setlocal
 "C:\Program Files\CMake\bin\cmake.exe" -E copy_if_different Z:/MyCompany/MyGame/cocos2d/external/openssl/prebuilt/win32/libssl-1_1.dll Z:/MyCompany/MyGame/proj.win32/bin/MyGame/Debug/libssl-1_1.dll
 if %errorlevel% neq 0 goto :cmEnd
@@ -283,7 +284,8 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
       <ProxyFileName>%(Filename)_p.c</ProxyFileName>
     </Midl>
     <PostBuildEvent>
-      <Message>												</Message>
+      <Message>
+      </Message>
       <Command>setlocal
 "C:\Program Files\CMake\bin\cmake.exe" -E copy_if_different Z:/MyCompany/MyGame/cocos2d/external/openssl/prebuilt/win32/libssl-1_1.dll Z:/MyCompany/MyGame/proj.win32/bin/MyGame/Release/libssl-1_1.dll
 if %errorlevel% neq 0 goto :cmEnd
@@ -449,7 +451,8 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
       <ProxyFileName>%(Filename)_p.c</ProxyFileName>
     </Midl>
     <PostBuildEvent>
-      <Message>												</Message>
+      <Message>
+      </Message>
       <Command>setlocal
 "C:\Program Files\CMake\bin\cmake.exe" -E copy_if_different Z:/MyCompany/MyGame/cocos2d/external/openssl/prebuilt/win32/libssl-1_1.dll Z:/MyCompany/MyGame/proj.win32/bin/MyGame/MinSizeRel/libssl-1_1.dll
 if %errorlevel% neq 0 goto :cmEnd
@@ -614,7 +617,8 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
       <ProxyFileName>%(Filename)_p.c</ProxyFileName>
     </Midl>
     <PostBuildEvent>
-      <Message>												</Message>
+      <Message>
+      </Message>
       <Command>setlocal
 "C:\Program Files\CMake\bin\cmake.exe" -E copy_if_different Z:/MyCompany/MyGame/cocos2d/external/openssl/prebuilt/win32/libssl-1_1.dll Z:/MyCompany/MyGame/proj.win32/bin/MyGame/RelWithDebInfo/libssl-1_1.dll
 if %errorlevel% neq 0 goto :cmEnd
@@ -805,12 +809,14 @@ if %errorlevel% neq 0 goto :VCEnd</Command>
     </CustomBuild>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\Classes\GameScene.h" />
     <ClInclude Include="Z:\MyCompany\MyGame\Classes\AppDelegate.h" />
-    <ClInclude Include="Z:\MyCompany\MyGame\Classes\HelloWorldScene.h" />
+    <ClInclude Include="..\Classes\MenuScene.h" />
     <ClInclude Include="Z:\MyCompany\MyGame\proj.win32\main.h" />
     <ClInclude Include="Z:\MyCompany\MyGame\proj.win32\resource.h" />
+    <ClCompile Include="..\Classes\GameScene.cpp" />
     <ClCompile Include="Z:\MyCompany\MyGame\Classes\AppDelegate.cpp" />
-    <ClCompile Include="Z:\MyCompany\MyGame\Classes\HelloWorldScene.cpp" />
+    <ClCompile Include="..\Classes\MenuScene.cpp" />
     <ClCompile Include="Z:\MyCompany\MyGame\proj.win32\main.cpp" />
     <ResourceCompile Include="Z:\MyCompany\MyGame\proj.win32\game.rc" />
     <ClInclude Include="Z:\MyCompany\MyGame\Resources\CloseNormal.png" />
