--- a/proj.win32/MyGame.vcxproj.filters
+++ b/proj.win32/MyGame.vcxproj.filters
@@ -16,6 +16,9 @@
     <ClCompile Include="..\Classes\GameScene.cpp">
       <Filter>Source Files\Classes</Filter>
     </ClCompile>
+    <ClCompile Include="Z:\MyCompany\MyGame\Classes\Timer.cpp">
+      <Filter>Source Files\Classes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Z:\MyCompany\MyGame\Classes\AppDelegate.h">
@@ -49,6 +52,9 @@
       <Filter>Resources\res</Filter>
     </ClInclude>
     <ClInclude Include="..\Classes\GameScene.h">
+      <Filter>Source Files\Classes</Filter>
+    </ClInclude>
+    <ClInclude Include="Z:\MyCompany\MyGame\Classes\Timer.h">
       <Filter>Source Files\Classes</Filter>
     </ClInclude>
   </ItemGroup>
